--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,21 +1,26 @@
+unbind-key C-b
+
+set -g prefix C-q
+bind-key C-q send-prefix
+
 # Connect macOS's clipboard
 bind-key -T copy-mode M-w send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'
 
 # Seamless navigation integration with vim
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind-key -T copy-mode-vi C-h select-pane -L
-bind-key -T copy-mode-vi C-j select-pane -D
-bind-key -T copy-mode-vi C-k select-pane -U
-bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
+bind-key C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# bind-key -T copy-mode-vi C-h select-pane -L
+# bind-key -T copy-mode-vi C-j select-pane -D
+# bind-key -T copy-mode-vi C-k select-pane -U
+# bind-key -T copy-mode-vi C-l select-pane -R
+# bind-key -T copy-mode-vi C-\ select-pane -l
 
-bind-key C-k send-keys C-k
+# bind-key C-k send-keys C-k
  
 # 0 is too far from ` ;)
 set -g base-index 1
@@ -24,12 +29,13 @@ set -g base-index 1
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-#set -g default-terminal screen-256color
+set -g default-terminal screen-256color
 set -g status-keys vi
 set -g history-limit 10000
 
 setw -g mode-keys vi
-setw -g mode-mouse on
+# Use mouse to select and copy
+# set -g mouse on
 setw -g monitor-activity on
 
 bind-key v split-window -h
