--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,12 @@
+set-option -g default-shell /usr/bin/zsh
+
 unbind-key C-b
 
 set -g prefix C-q
 bind-key C-q send-prefix
 
 # Connect macOS's clipboard
-bind-key -T copy-mode M-w send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'
+# bind-key -T copy-mode M-w send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'
 
 # Seamless navigation integration with vim
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -65,8 +67,7 @@ bind r source-file ~/.tmux.conf
 set -g status-bg black
 set -g status-fg white
 set -g window-status-current-bg white
-set -g window-status-current-fg black
-set -g window-status-current-attr bold
+set -g window-status-current-fg black set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)'
