Find zsh directory automatically

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell $SHELL
 
 unbind-key C-b
 
@@ -6,7 +6,7 @@ set -g prefix C-q
 bind-key C-q send-prefix
 
 # Connect macOS's clipboard
-# bind-key -T copy-mode M-w send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'
+bind-key -T copy-mode M-w send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'
 
 # Seamless navigation integration with vim
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
