--- a/tmux.conf
+++ b/tmux.conf
@@ -72,3 +72,14 @@ set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)'
 
+# Clipboard
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
+# Turn off automatic rename
+set-option -g allow-rename off
+set allow-rename off
+
+# Tmuxline
+source-file ~/projects/dotfiles/vim/tmux-theme.snapshot
+
+bind -n C-k clear-history
