--- a/tmux.conf
+++ b/tmux.conf
@@ -82,4 +82,4 @@ set allow-rename off
 # Tmuxline
 source-file ~/projects/dotfiles/vim/tmux-theme.snapshot
 
-bind -n C-k clear-history
+bind -n C-l send-keys C-l \; clear-history
