Add git related config

--- a/linux/tmux.conf
+++ b/linux/tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-shell `which zsh`
+set-option -g default-shell /usr/bin/zsh
 
 unbind-key C-b
 
@@ -77,9 +77,8 @@ bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selec
 
 # Turn off automatic rename
 set-option -g allow-rename off
-set allow-rename off
-
-# Tmuxline
-source-file ~/projects/dotfiles/vim/tmux-theme.snapshot
 
 bind -n C-l send-keys C-l \; clear-history
+
+# Tmuxline
+if-shell "test -f $HOME/.myTmuxSnapshot" "source $HOME/.myTmuxSnapshot"
