--- a/linux/tmux.conf
+++ b/linux/tmux.conf
@@ -5,9 +5,6 @@ unbind-key C-b
 set -g prefix C-q
 bind-key C-q send-prefix
 
-# Connect macOS's clipboard
-bind-key -T copy-mode M-w send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'
-
 # Seamless navigation integration with vim
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -72,13 +69,10 @@ set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)'
 
-# Clipboard
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
-
 # Turn off automatic rename
 set-option -g allow-rename off
 
 bind -n C-l send-keys C-l \; clear-history
 
 # Tmuxline
-if-shell "test -f $HOME/.myTmuxSnapshot" "source $HOME/.myTmuxSnapshot"
+# if-shell "test -f $HOME/.myTmuxSnapshot" "source $HOME/.myTmuxSnapshot"
