--- a/osx/tmux.conf
+++ b/osx/tmux.conf
@@ -62,13 +62,8 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf
 
 # THEME
-set -g status-bg black
-set -g status-fg white
-# set -g window-status-current-bg white
-# set -g window-status-current-fg black set -g window-status-current-attr bold
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=green](#S) #(whoami)'
+set-option -g status-style fg=white,bg=black
+set-window-option -g window-status-current-style fg=black,bold,bg=yellow
 
 # Clipboard
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
